--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Find Github Repository Using UserID",
   "main": "index.js",
   "scripts": {
+    "start-dev": "nodemon ./server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
